--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,16 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    height: 100%;
+    width: 100%;
   }
   
   header {
     background-color: #333;
     color: #fff;
     padding: 10px 20px;
+    position: sticky;
+    top: 0;
   }
   
   .header-content {
@@ -19,12 +23,22 @@ body {
   
   .container {
     display: flex;
-    margin: 20px;
+    height: 100%;
   }
   
   .side-panel {
     flex: 0 0 auto;
-    padding: 10px;
+    width: 50vh;
+    background-color: whitesmoke;
+    border-right: 1px solid black;
+    height: 88vh;
+    padding-left: 16px;
+  }
+  .side-panel button{
+    width: 35vh;
+    display: flex;
+    justify-content: space-between;
+    border: .5px solid #ccc;
   }
   
   #form-container {
@@ -32,20 +46,44 @@ body {
     padding: 10px;
   }
   
+  .div2{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  .div2 button{
+    margin-top: 10px;
+    margin-right: 10px;
+  }
+
   form {
     border: 1px solid #ccc;
+    display: flex;
+    align-items: center;
+    background-color: rgba(250, 235, 215, 0.205);
+    flex-direction: column;
     padding: 10px;
+    height: 100%;
+    width: 100%;
   }
   
   .form-element {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    background-color: #ccc;
+    padding: 10px;
+    width: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .form-element:hover{
+    box-shadow: 5px 5px 5px rgba(20, 24, 24, 0.404);
   }
   
   button {
     display: block;
     margin-bottom: 10px;
-    background-color: #007bff;
-    color: #fff;
     border: none;
     padding: 10px;
     cursor: pointer;
@@ -57,5 +95,101 @@ body {
   
   #save-btn {
     float: right;
+    width: 25vh;
+    border-radius: 20px;
   }
-  
+
+
+  @media screen and (width<=320px) {
+    header{
+      width: 140vh;
+    }
+    .header-content{
+      width: 100%;
+      height: 10vh;
+      font-size: 10px;
+    }
+    #save-btn{
+      width: 70px;
+      padding: 10px;
+      font-size: 12px;
+    }
+    .container{
+      display: grid;
+      grid-template-rows: 300px auto;
+    }
+    .side-panel{
+      width: 143vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .side-panel button{
+      width: 100%;
+    }
+    .form-element{
+      width: 45rem;
+    }
+  }
+  @media screen and (width<=376px) {
+    header{
+      width: 140vh;
+    }
+    .header-content{
+      width: 100%;
+      height: 10vh;
+      font-size: 10px;
+    }
+    #save-btn{
+      width: 70px;
+      padding: 10px;
+      font-size: 12px;
+    }
+    .container{
+      display: grid;
+      grid-template-rows: 300px auto;
+    }
+    .side-panel{
+      width: 143vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .side-panel button{
+      width: 100%;
+    }
+    .form-element{
+      width: 45rem;
+    }
+  }
+  @media screen and (width<=426px) {
+    header{
+      width: 140vh;
+    }
+    .header-content{
+      width: 100%;
+      height: 10vh;
+      font-size: 10px;
+    }
+    #save-btn{
+      width: 70px;
+      padding: 10px;
+      font-size: 12px;
+    }
+    .container{
+      display: grid;
+      grid-template-rows: 300px auto;
+    }
+    .side-panel{
+      width: 143vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .side-panel button{
+      width: 100%;
+    }
+    .form-element{
+      width: 45rem;
+    }
+  }
